# Fault

./: .gitignore  CMakeLists.txt  Doxyfile
include/: Game.h  Graphics.h  Renderer.h  Texture.h  WindowManager.h
resources/: tiles.ftpp
src/: Game.c  Graphics.c  Renderer.c  Texture.c  WindowManager.c  main.c
